--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 .stylish {
     font-family: 'Lobster', cursive;
@@ -7,5 +8,9 @@
 
 .quicktext {
     font-family: 'Quicksand', sans-serif;
+}
+
+.branding {
+    font-family: 'Righteous', cursive;
 }
 
