--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 
 .stylish {
     font-family: 'Lobster', cursive;
@@ -10,7 +10,7 @@
     font-family: 'Quicksand', sans-serif;
 }
 
-.branding {
-    font-family: 'Righteous', cursive;
+.fira {
+    font-family: 'Fira Code', monospace;
 }
 
