added link and font

--- a/src/loader/loader.css
+++ b/src/loader/loader.css
@@ -12,8 +12,8 @@
     height: 0;
     margin: 8px;
     box-sizing: border-box;
-    border: 32px solid #fff;
-    border-color: #fff transparent #fff transparent;
+    border: 32px solid rgb(251, 255, 32);
+    border-color: rgb(251, 255, 20) transparent rgb(255, 191, 16) transparent;
     animation: lds-hourglass 1.2s infinite;
   }
   .center{
